# idiscore

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build.yml
docs/: Makefile  conf.py  configuration.rst  development.rst  index.rst  installation.rst  modules.rst  requirements.docs.txt  usage.rst
docs/generator/: generate_instance_descriptions.py
docs/sphinx/: advanced.rst  concepts.rst  conf.py  configuration.rst  default_core_description.rst  dicom.rst  getting_started.rst  index.rst  installation.rst  make.bat  modules.rst  requirements.docs.txt
examples/: custom_profile.py  deidentify_a_dataset.py  deidentify_a_dataset_basic.py  deidentify_a_dataset_minimal.py  deidentify_a_dataset_with_lists.py
idiscore/: __init__.py  _public_dicom.py  annotation.py  bouncers.py  cli.py  core.py  dataset.py  defaults.py  delta.py  dicom.py  dicomannotation.py  exceptions.py  identifiers.py  idiscore.py  image_processing.py  imageprocessing.py  insertions.py  logging.py  logs.py  nema.py  nema_parsing.py  operations.py  operators.py  private_processing.py  privateprocessing.py  profiles.py  rule_sets.py  rules.py  settings.py  templates.py  tools.py  validation.py
tests/: __init__.py  conftest.py  factories.py  test_annotation.py  test_bouncers.py  test_cli.py  test_core.py  test_dataset.py  test_defaults.py  test_dicomannotation.py  test_factories.py  test_identifiers.py  test_idiscore.py  test_image_processing.py  test_imageprocessing.py  test_insertions.py  test_nema.py  test_operations.py  test_operators.py  test_private_processing.py  test_privateprocessing.py  test_profiles.py  test_rule_sets.py  test_validation.py
tests/resources/: annotated_example.json
tools/: README.rst  generate_dicom_py.py  generate_public_dicom.py  requirements_tools.txt
