[tool.poetry]
name = "idiscore"
version = "1.3.0"
description = "Pure-python deidentification of DICOM images using Attribute Confidentiality Options"
authors = ["sjoerdk <sjoerd.kerkstra@radboudumc.nl>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.12"
Jinja2 = "^3.1.6"
Pillow = "^11.2.1"
dicomgenerator = "^0.9.1"
pydicom = "^3.0.1"

[tool.poetry.scripts]
idiscore = "idiscore.cli:main"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^5.0.0"
pytest = "^8.4.1"
coverage = "^7.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py{312}
[gh-actions]
python =
    3.12: py312
[testenv]
allowlist_externals =
    poetry
setenv =
    PYTHONPATH = {toxinidir}
commands =
    poetry install -v
    poetry run pytest --cov-branch --cov-report term-missing --cov=evalutils --basetemp={envtmpdir} {posargs}
"""

