[project]
name = "idiscore"
version = "1.3.0"
description = "Pure-python deidentification of DICOM images using Attribute Confidentiality Options"
authors = ["sjoerdk <sjoerd.kerkstra@radboudumc.nl>"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dicomgenerator>=0.9.1",
    "jinja2>=3.1.6",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
