[project]
name = "idiscore"
version = "1.4.0"
description = "Pure-python deidentification of DICOM images using Attribute Confidentiality Options"
authors = [{ name = "sjoerdk", email = "sjoerd.kerkstra@radboudumc.nl" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dicomgenerator>=0.9.1",
    "jinja2>=3.1.6",
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]


[dependency-groups]
dev = [
    "coverage>=7.11.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]

